leggera modifica al javascript

--- a/fullstack/src/main/resources/templates/confermatoken.html
+++ b/fullstack/src/main/resources/templates/confermatoken.html
@@ -61,7 +61,7 @@
         document.getElementById("email").innerHTML = email;
         function myFunction() {
             sessionStorage.removeItem("email");
-            location.replace("http://127.0.0.1:5500/pages/login.html")
+            location.replace("http://127.0.0.1:5500/login.html")
            
             
 }
