--- a/fullstack/src/main/resources/templates/recuperapass.html
+++ b/fullstack/src/main/resources/templates/recuperapass.html
@@ -55,7 +55,7 @@
         function myFunction() {
             var email = document.getElementById("email").value;
 
-            location.replace("http://127.0.0.1:5500/pages/confermatoken.html")
+            location.replace("http://127.0.0.1:5500/confermatoken.html")
             sessionStorage.setItem("email", String(email));
             
 }
