Login e Registrazione - input required

--- a/fullstack/src/main/resources/templates/registrazione.html
+++ b/fullstack/src/main/resources/templates/registrazione.html
@@ -28,31 +28,31 @@
                         <div class="form-group row">
                             <label for="inputEmail3" class="col-sm-2 col-form-label">Nome</label>
                             <div class="col-sm-10">
-                              <input type="text" class="form-control" name="nome" id="nome" placeholder="inserisci il nome">
+                              <input type="text" class="form-control" name="nome" id="nome" placeholder="inserisci il nome" required>
                             </div>
                           </div>
                           <div class="form-group row">
                             <label for="inputPassword3" class="col-sm-2 col-form-label">Cognome</label>
                             <div class="col-sm-10">
-                              <input type="text" class="form-control" name="cognome"  id="cognome" placeholder="inserisci il cognome">
+                              <input type="text" class="form-control" name="cognome"  id="cognome" placeholder="inserisci il cognome" required>
                             </div>
                           </div>
                           <div class="form-group row">
                             <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
                             <div class="col-sm-10">
-                              <input type="email" class="form-control" name="email"  id="email" placeholder="Email">
+                              <input type="email" class="form-control" name="email"  id="email" placeholder="Email" required>
                             </div>
                           </div>
                           <div class="form-group row">
                             <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
                             <div class="col-sm-10">
-                              <input  type="password" class="form-control" name="password1"  id="password1" placeholder="Password">
+                              <input  type="password" class="form-control" name="password1"  id="password1" placeholder="Password" required>
                             </div>
                           </div>
                           <div class="form-group row">
                             <label for="inputPassword3" class="col-sm-2 col-form-label">Conferma</label>
                             <div class="col-sm-10">
-                              <input  type="password" class="form-control" name="password2" id="password2" placeholder="conferma password">
+                              <input  type="password" class="form-control" name="password2" id="password2" placeholder="conferma password" required>
                             </div>
                           </div>
                           <form>
