--- a/fullstack/src/main/resources/templates/menu.html
+++ b/fullstack/src/main/resources/templates/menu.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>Menu</title>
 </head>
 <body>
-  <h1> Ciao </h1>
+	<div class="container"> 
+		<div class="registrazione-container">
+			<a href="/registrazione"><button class="btn-registrazione"> Registrazione </button></a>
+		</div>
+		<div class="report-container">
+			<a href="/report"><button class="btn-report"> Report </button></a>
+		</div>
+	</div>
+
+
 </body>
 </html>
