--- a/fullstack/src/main/resources/templates/registrazione.html
+++ b/fullstack/src/main/resources/templates/registrazione.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
    
-    <title>registrazione</title>
+    <title>Registrazione</title>
 </head>
 <body style="background: rgb(66,69,73); background: radial-gradient(circle, rgba(66,69,73,1) 0%, rgba(30,33,36,1) 100%);">
     <div class="container" style="margin-top: 3%;" >
