--- a/fullstack/src/main/resources/templates/registrazione.html
+++ b/fullstack/src/main/resources/templates/registrazione.html
@@ -23,7 +23,7 @@
       
                 <div class="col-6" style="border: 1px solid gray; -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 32px 49px 48px 37px rgba(0,0,0,0); 
                 box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 32px 49px 48px 37px rgba(0,0,0,0); padding: 50px; background-color: whitesmoke;">
-                    <form  onsubmit="return checkform(this);"  action="registrazione" method="post">
+                    <form  onsubmit="return checkform(this);"  action="registrazione" method="post" th:object = "${ruoli}" >
                         <h1 style="margin-bottom: 30px; margin-left: 32%; color: rgb(64, 64, 64);">Registrati</h1>
                         <div class="form-group row">
                             <label for="inputEmail3" class="col-sm-2 col-form-label">Nome</label>
@@ -43,37 +43,16 @@
                               <input type="email" class="form-control" name="email"  id="email" placeholder="Email" required>
                             </div>
                           </div>
-                          <div class="form-group row">
-                            <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-                            <div class="col-sm-10">
-                              <input  type="password" class="form-control" name="password1"  id="password1" placeholder="Password" required>
-                            </div>
+                          // select di ruoli
+                          	<select class="form-control" id="ruoli" name="idruoli">
+              					<option th:each="r:${ruoli}" th:value="${r.idruolo}" th:text="${r.ruoli}"></option>
+              				</select>
                           </div>
-                          <div class="form-group row">
-                            <label for="inputPassword3" class="col-sm-2 col-form-label">Conferma</label>
-                            <div class="col-sm-10">
-                              <input  type="password" class="form-control" name="password2" id="password2" placeholder="conferma password" required>
-                            </div>
-                          </div>
-                          <form>
+                          <form>                         
                             <div class="form-group">
-                              
-                              
-                              
                               <div class="g-recaptcha" data-sitekey="6LfOIysjAAAAAEoBl8tDQvc_7qtOb-2z3cm1sX-p"></div>
                               
                             </div>
-                            
-
-   
-    
-
-    
-   
-                            
-
-
-                        
                             <a href="login" class="btn btn-secondary  active" role="button" aria-pressed="true">Indietro</a>
                             <button  type="submit" class="btn btn-primary ">Registrati</button>
                       </form>
