--- a/fullstack/src/main/resources/static/css/style.css
+++ b/fullstack/src/main/resources/static/css/style.css
@@ -12,7 +12,16 @@ form{
     margin-left: 30%; 
     margin-right: 30%; 
     margin-top: 30px;  
-    padding: 100px 30px 40px 30px; 
+    padding: 30px 30px 40px 30px;  
     border-radius: 2%; 
     background-color: whitesmoke;
+}
+
+.titolo{
+
+    margin-left: 150px;
+    margin-bottom: 50px;
+    margin-top: 30px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 40px;
 }
