--- a/fullstack/src/main/resources/templates/sondaggio.html
+++ b/fullstack/src/main/resources/templates/sondaggio.html
@@ -9,67 +9,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-  <form  action="sondaggio" method="post" >
-    <h1>SONDAGGIO</h1>
-    <div class="card" >               
+  <form th:action="@{sondaggio/{id}(id=${materia)}" th:object="${risposte}" method="post" >
+ 
+  
+  	 <h1>SONDAGGIO</h1>
+    <div class="card" th:each="domanda : ${domande}" >               
       <div class="card-body">        
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text" th:text="${domanda.domanda}"></p>
         <select class="form-control form-control-sm" style="max-width: 200px; " >
-          <option>Per niente soodisfatto</option>
-          <option>Poco soddisfatto</option>
-          <option>Indifferente</option>
-          <option>Abbastanza soddisfatto</option>
-          <option>soddisfatto</option>
-        </select>
-      </div>
-    </div>
-
-
-    <div class="card">               
-      <div class="card-body">        
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <select  class="form-control form-control-sm"  style="max-width: 200px;" >
-          <option>Per niente soodisfatto</option>
-          <option>Poco soddisfatto</option>
-          <option>Indifferente</option>
-          <option>Abbastanza soddisfatto</option>
-          <option>soddisfatto</option>
-
-        </select>       
-      </div>
-    </div>
-
-    <div class="card" >               
-      <div class="card-body">        
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <select class="form-control form-control-sm" style="max-width: 200px; " >
-          <option>Per niente soodisfatto</option>
-          <option>Poco soddisfatto</option>
-          <option>Indifferente</option>
-          <option>Abbastanza soddisfatto</option>
-          <option>soddisfatto</option>
-
-        </select>
-      </div>
-    </div>
-
-    <div class="card" >               
-      <div class="card-body">        
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <select class="form-control form-control-sm" style="max-width: 200px; " >
-          <option>Per niente soodisfatto</option>
-          <option>Poco soddisfatto</option>
-          <option>Indifferente</option>
-          <option>Abbastanza soddisfatto</option>
-          <option>soddisfatto</option>
-        </select>
-      </div>
-    </div>
-
-    <div class="card" >               
-      <div class="card-body">        
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <select class="form-control form-control-sm" style="max-width: 200px;" >
           <option>Per niente soodisfatto</option>
           <option>Poco soddisfatto</option>
           <option>Indifferente</option>
@@ -78,7 +25,11 @@
         </select>
       </div>
     </div>  
+  
+   
 
+
+    
 
     <button type="submit" class="btn btn-primary btn-lg btn-block" style="margin-top: 30px;">Invia il sondaggio</button>
 
