--- a/fullstack/src/main/resources/templates/menuFeedback.html
+++ b/fullstack/src/main/resources/templates/menuFeedback.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>menu</title>
+   
 </head>
 <body>
 
-<div>
-	<div th:each="materia : ${materie}">
 
+<div class="pusalntiera"  >
+	<div  class="button" th:each="materia : ${materie}>		
+		<a  role="button" th:text="${materia.modulo}" th:href="@{/studente/menu/{id}(id=${materia.modulo})}" >		
 	
-		
-		<a class="btn btn-secondary  active" role="button" th:text="${materia.modulo}" th:href="@{/studente/menu/{id}(id=${materia.modulo})}">
-		
-		
 		</a>
-
-
-		
-
-
 	</div>
+	
+	
 </div>
 
 </body>
