errore battiture html

--- a/fullstack/src/main/resources/templates/menuFeedback.html
+++ b/fullstack/src/main/resources/templates/menuFeedback.html
@@ -12,10 +12,13 @@
 
 
 <div class="pusalntiera"  >
-	<div  class="button" th:each="materia : ${materie}>		
-		<a  role="button" th:text="${materia.modulo}" th:href="@{/studente/menu/{id}(id=${materia.modulo})}" >		
+	<div  class="button" th:each="materia : ${materie}">		
+		
+		<a role="button" th:text="${materia.modulo}" th:href="@{/studente/menu/{id}(id=${materia.modulo})}">
+		
+		</a>	
 	
-		</a>
+		
 	</div>
 	
 	
