Page Report - Sidebar on the left with all the href
Moved Registration page to AdminController

--- a/fullstack/src/main/resources/templates/registrazione.html
+++ b/fullstack/src/main/resources/templates/registrazione.html
@@ -47,7 +47,7 @@
 	                	  	<label for="inputRuolo" class="col-sm-2 col-form-label">Ruolo</label>
 	                	  	<div class="col-sm-10">
 	                          	<select class="form-control" id="ruolo" name="ruolo" required>
-	              					<option th:each="r:${ruolo}" th:value="${r.idruolo}" th:text="${r.ruoli}" ></option>
+	              					<option th:each="r:${ruolo}" th:value="${r.idruolo}" th:text="${r.ruolo}" ></option>
 	              				</select>
 	                	  	</div>
                           </div>
