--- a/fullstack/src/main/resources/templates/report.html
+++ b/fullstack/src/main/resources/templates/report.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
     <body>
+    <!--  Navbar on the left -->
     <div class="sidebar">
         <div class="logo-details">
 
