--- a/fullstack/src/main/resources/templates/reportDetails.html
+++ b/fullstack/src/main/resources/templates/reportDetails.html
@@ -8,20 +8,16 @@
 </head>
 <body>
 	<th:block th:each="feedback : ${feedback}">	
-	<div class="details-container">
-		<div class="number-question"> 
-               <p th:text= "Domanda + ${feedback.domanda.iddomanda}"></p>
-        </div>
-        
-        <div class="content-question">
-            <p th:text= "${feedback.domanda.domanda}"></p>
-        </div>
-
-        <div class="rating">
-            <p th:text="${feedback.voto}"></p> 
-        </div>
-    </div>
-	</th:block> 
+	<table class="details-table">
+	       <tr>
+	       <td class="data"><p th:text="${feedback.data}"></p></td>
+	       <td class="number-question"><p th:text= "Domanda + ${feedback.domanda.iddomanda}"></p></td>
+	       <td class="content-question"><p th:text= "${feedback.domanda.domanda}"></p></td>
+	       <td class="rating"><p th:text="${feedback.voto}"></p></td>
+	       <td class="dettagli"><button class="btn-dettagli"><i class='bx bx-detail'></i></button></td>
+	       </tr>
+  	</table>
+  	</th:block> 
 </body>
 <style>
 
