--- a/fullstack/src/main/resources/templates/registrazione.html
+++ b/fullstack/src/main/resources/templates/registrazione.html
@@ -4,71 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
    
     <title>Registrazione</title>
 </head>
-<body style="background: rgb(66,69,73); background: radial-gradient(circle, rgba(66,69,73,1) 0%, rgba(30,33,36,1) 100%);">
-    <div class="container" style="margin-top: 3%;" >
-        <div class="row align-items-start">
-         
-        </div>
-        <div class="row align-items-center">       
-        
-           
-                <div class="col">            
-                </div>
-                
-      
-                <div class="col-6" style="border: 1px solid gray; -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 32px 49px 48px 37px rgba(0,0,0,0); 
-                box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 32px 49px 48px 37px rgba(0,0,0,0); padding: 50px; background-color: whitesmoke;">
-                    <form  onsubmit="return checkform(this);"  action="registrazione" method="post" th:object = "${ruoli}" >
-                        <h1 style="margin-bottom: 30px; margin-left: 32%; color: rgb(64, 64, 64);">Registrati</h1>
-                        <div class="form-group row">
-                            <label for="inputEmail3" class="col-sm-2 col-form-label">Nome</label>
-                            <div class="col-sm-10">
-                              <input type="text" class="form-control" name="nome" id="nome" placeholder="Inserisci il nome..." required>
-                            </div>
-                          </div>
-                          <div class="form-group row">
-                            <label for="inputPassword3" class="col-sm-2 col-form-label">Cognome</label>
-                            <div class="col-sm-10">
-                              <input type="text" class="form-control" name="cognome"  id="cognome" placeholder="Inserisci il cognome..." required>
-                            </div>
-                          </div>
-                          <div class="form-group row">
-                            <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-                            <div class="col-sm-10">
-                              <input type="email" class="form-control" name="email"  id="email" placeholder="Inserisci l'email..." required>
-                            </div>
-                          </div>
-	                	  <div class="form-group row">
-	                	  	<label for="inputRuolo" class="col-sm-2 col-form-label">Ruolo</label>
-	                	  	<div class="col-sm-10">
-	                          	<select class="form-control" id="ruolo" name="ruolo" required>
-	              					<option th:each="r:${ruolo}" th:value="${r.idruolo}" th:text="${r.ruolo}" ></option>
-	              				</select>
-	                	  	</div>
-                          </div>
-                                   <!-- Ho tolto il tag form, ma non se c'è bisogno per il captcha -->
-                            <div class="form-group row">
-                              <div class="g-recaptcha" data-sitekey="6LfOIysjAAAAAEoBl8tDQvc_7qtOb-2z3cm1sX-p"></div>
-                              
-                            </div>
-                            <a href="login" class="btn btn-secondary  active" role="button" aria-pressed="true">Indietro</a>
-                            <button  type="submit" class="btn btn-primary ">Registrati</button>
-                 </form>
-                </div>
-                
-                <div class="col">        
-                </div>
-                
-              </div>
-          </div>
-        <div class="row align-items-end">
-          
-        </div>
+<body>
+	<form action="/admin/register" method="post">
+			  <h3>Registrazione Docente</h3><br>
+			  
+				  	<label for="fname">Nome:</label>
+				  	<input type="text" name="nome" placeholder= "Nome">
+	 		    
+	 		    	
+				  	<label for="lname">Cognome:</label>
+				  	<input type="text" name="cognome"placeholder= "Cognome">
+				
+				
+				  	<label for="email">Email:</label>
+				  	<input type="text" name="email"placeholder= "Email">
+
+					<select class="form-control" id="ruolo" name="ruolo" required>
+                           <option th:each="r:${ruolo}" th:value="${r.idruolo}" th:text="${r.ruolo}" ></option>
+                    </select>
+                    <!-- Ho tolto il tag form, ma non so se c'è bisogno per il captcha -->
+                    <div class="form-group row">
+                      <div class="g-recaptcha" data-sitekey="6LfOIysjAAAAAEoBl8tDQvc_7qtOb-2z3cm1sX-p"></div>
+                     </div>
+                     
+			  		<div class="login-btn">
+	                   <button class="btn-lgn" type="submit" value="Registrati"> Registrati </button>
+	    			</div>
+			 
+			  	<!--  Success message -->
+				<br>
+				<div th:if="${param.success}">
+					<div class="alert"> Grazie per esserti registrato! </div>
+					<div class="alert"><a href="/loginD">Tornare alla pagina login?</a></div>
+				</div>
+				<br>
+				
+	</form>
+    
+                    
  
     
       <script type="text/javascript">
