--- a/fullstack/src/main/resources/templates/registrazione.html
+++ b/fullstack/src/main/resources/templates/registrazione.html
@@ -4,62 +4,472 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+     <!-- Boxicons CDN Link -->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
    
     <title>Registrazione</title>
 </head>
 <body>
-	<form action="/admin/register" method="post">
-			  <h3>Registrazione Docente</h3><br>
-			  
-				  	<label for="fname">Nome:</label>
-				  	<input type="text" name="nome" placeholder= "Nome">
-	 		    
-	 		    	
-				  	<label for="lname">Cognome:</label>
-				  	<input type="text" name="cognome"placeholder= "Cognome">
-				
-				
-				  	<label for="email">Email:</label>
-				  	<input type="text" name="email"placeholder= "Email">
+	<!--  Navbar on the left -->
+    <div class="sidebar">
+        <div class="logo-details">
 
-					<select class="form-control" id="ruolo" name="ruolo" required>
-                           <option th:each="r:${ruolo}" th:value="${r.idruolo}" th:text="${r.ruolo}" ></option>
-                    </select>
-                    <!-- Ho tolto il tag form, ma non so se c'è bisogno per il captcha -->
-                    <div class="form-group row">
-                      <div class="g-recaptcha" data-sitekey="6LfOIysjAAAAAEoBl8tDQvc_7qtOb-2z3cm1sX-p"></div>
-                     </div>
-                     
-			  		<div class="login-btn">
-	                   <button class="btn-lgn" type="submit" value="Registrati"> Registrati </button>
-	    			</div>
-			 
+        <i></i>
+            <div class="logo_name"></div>
+            <i class='bx bx-menu' id="btn" ></i>
+        </div>
+
+        
+        <ul class="nav-list">
+        <li>
+            <a href="/admin/listaUtenti">
+            <i class='bx bxs-user-detail'></i>
+            <span class="links_name">Lista Utenti</span>
+            </a>
+            <span class="tooltip">Lista Utenti</span>
+        </li>
+
+
+        <li>
+            <a href="/admin/registrazione"> 
+                <i class='bx bxs-user-plus' ></i>
+            <span class="links_name">Registrazione</span>
+            </a>
+            <span class="tooltip">Registrazione</span>
+        </li>
+            
+            
+
+        <li> 
+            <a href="/"> 
+            <i class='bx bxs-user' ></i>
+            <span class="links_name">Login</span>
+            </a>
+            <span class="tooltip">Login </span>
+        </li>
+      
+
+        <li class="profile">
+            <div class="profile-details">
+            <!--<img src="profile.jpg" alt="profileImg">-->
+            <div class="name_job">
+                <div class="name"><p th:text= "${utente.nome}"></p></div> <!-- Nome Utente -->
+                <div class="job"><p th:text="${utente.ruolo.ruolo}"></div> <!-- Ruolo -->
+            </div>
+            </div>
+            <a href="/logout"><i class='bx bx-log-out' id="log_out" ></i></a> <!-- Mapping che mi fa il logout -->
+        </li>
+        </ul>
+    </div>
+	<!-- Registration Form -->
+	<section class="home-section">
+		
+		<div class="container">
+			<div align="center" class="title"> Registrazione </div>
+			<form action="/admin/register" method="post">
+				<div class="user-details">
+					<div class="input-box">
+					  	<span class="details"> Nome: </span>
+					  	<input type="text" name="nome" placeholder= "Nome" required>
+			 		</div> 
+			 		<div class="input-box">    	
+					  	<span class="details"> Cognome: </span>
+					  	<input type="text" name="cognome"placeholder= "Cognome" required>
+					</div> 	
+					<div class="input-box">	
+					  	<span class="details"> Email: </span>
+					  	<input type="text" name="email"placeholder= "Email" required>
+					</div> 	  	
+						  	
+					<div class="input-box">		
+						<span class="details"> Ruolo: </span>
+						<select class="form-control" id="ruolo" name="ruolo" required>
+	                           <option th:each="r:${ruolo}" th:value="${r.idruolo}" th:text="${r.ruolo}" ></option>
+	                    </select>
+		            </div> 
+		                    <!-- Ho tolto il tag form, ma non so se c'è bisogno per il captcha -->
+		            <div class="input-box">        
+	                    <div class="form-group row">
+	                      	<div class="g-recaptcha" data-sitekey="6LfOIysjAAAAAEoBl8tDQvc_7qtOb-2z3cm1sX-p"></div>
+	                    </div>
+		            </div>  
+		        </div>        
+				  		<div class="button">
+		                   <button class="btn" type="submit" value="Registrati"> Registrati </button>
+		    			</div>
+				
 			  	<!--  Success message -->
-				<br>
+				
 				<div th:if="${param.success}">
 					<div class="alert"> Grazie per esserti registrato! </div>
 					<div class="alert"><a href="/loginD">Tornare alla pagina login?</a></div>
 				</div>
-				<br>
-				
-	</form>
-    
-                    
- 
-    
+								
+			</form>
+	      
+	 	</div>
+	    
+    </section>
       <script type="text/javascript">
         var onloadCallback = function() {
           alert("grecaptcha is ready!");
         };
       </script>
-   
-  
 
-     
-      
 </body>
+<!-- CSS STYLE -->
+<style>
+/* Navbar Style */
+/* Google Font Link */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins" , sans-serif;
+}
+
+
+
+.sidebar{
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 78px;
+  background: #002F56;
+  padding: 6px 14px;
+  z-index: 99;
+  transition: all 0.5s ease;
+}
+
+.sidebar.open{
+  width: 250px;
+}
+
+
+.sidebar .logo-details{
+  height: 60px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+
+.sidebar .logo-details .icon{
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+
+
+.sidebar .logo-details .logo_name{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+
+
+.sidebar.open .logo-details .icon,
+.sidebar.open .logo-details .logo_name{
+  opacity: 1;
+}
+
+
+.sidebar .logo-details #btn{
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  font-size: 22px;
+  transition: all 0.4s ease;
+  font-size: 23px;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+
+.sidebar.open .logo-details #btn{
+  text-align: right;
+}
+.sidebar i{
+  color: #fff;
+  height: 60px;
+  min-width: 50px;
+  font-size: 28px;
+  text-align: center;
+  line-height: 60px;
+}
+.sidebar .nav-list{
+  margin-top: 20px;
+  height: 100%;
+}
+.sidebar li{
+  position: relative;
+  margin: 8px 0;
+  list-style: none;
+}
+.sidebar li .tooltip{
+  position: absolute;
+  top: -20px;
+  left: calc(100% + 15px);
+  z-index: 3;
+  background: #fff;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  padding: 6px 12px;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 400;
+  opacity: 0;
+  white-space: nowrap;
+  pointer-events: none;
+  transition: 0s;
+}
+.sidebar li:hover .tooltip{
+  opacity: 1;
+  pointer-events: auto;
+  transition: all 0.4s ease;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.sidebar.open li .tooltip{
+  display: none;
+}
+.sidebar input{
+  font-size: 15px;
+  color: #FFF;
+  font-weight: 400;
+  outline: none;
+  height: 50px;
+  width: 100%;
+  width: 50px;
+  border: none;
+  border-radius: 12px;
+  transition: all 0.5s ease;
+  background: #1d1b31;
+}
+.sidebar.open input{
+  padding: 0 20px 0 50px;
+  width: 100%;
+}
+.sidebar .bx-search{
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  font-size: 22px;
+  background: #1d1b31;
+  color: #FFF;
+}
+.sidebar.open .bx-search:hover{
+  background: #1d1b31;
+  color: #FFF;
+}
+.sidebar .bx-search:hover{
+  background: #FFF;
+  color: #11101d;
+}
+.sidebar li a{
+  display: flex;
+  height: 100%;
+  width: 100%;
+  border-radius: 12px;
+  align-items: center;
+  text-decoration: none;
+  transition: all 0.4s ease;
+  background: #11101D;
+}
+
+
+.sidebar li a:hover{
+  background: #FFF;
+}
+.sidebar li a .links_name{
+  color: #fff;
+  font-size: 15px;
+  font-weight: 400;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.4s;
+}
+.sidebar.open li a .links_name{
+  opacity: 1;
+  pointer-events: auto;
+}
+
+
+.sidebar li a:hover .links_name,
+.sidebar li a:hover i{
+  transition: all 0.5s ease;
+  color: #11101D;
+}
+.sidebar li i{
+  height: 50px;
+  line-height: 50px;
+  font-size: 18px;
+  border-radius: 12px;
+}
+
+
+.sidebar li.profile{
+  position: fixed;
+  height: 60px;
+  width: 78px;
+  left: 0;
+  bottom: -8px;
+  padding: 10px 14px;
+  background: #1d1b31;
+  transition: all 0.5s ease;
+  overflow: hidden;
+}
+.sidebar.open li.profile{
+  width: 250px;
+}
+.sidebar li .profile-details{
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.sidebar li img{
+  height: 45px;
+  width: 45px;
+  object-fit: cover;
+  border-radius: 6px;
+  margin-right: 10px;
+}
+.sidebar li.profile .name,
+.sidebar li.profile .job{
+  font-size: 15px;
+  font-weight: 400;
+  color: #fff;
+  white-space: nowrap;
+}
+.sidebar li.profile .job{
+  font-size: 12px;
+}
+.sidebar .profile #log_out{
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  background: #1d1b31;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  border-radius: 0px;
+  transition: all 0.5s ease;
+}
+.sidebar.open .profile #log_out{
+  width: 50px;
+  background: none;
+}
+.home-section{
+  position: relative;
+  background: #ffffff;
+  min-height: 100vh;
+  top: 0;
+  left: 78px;
+  width: calc(100% - 78px);
+  transition: all 0.5s ease;
+  z-index: 2;
+  padding: 10px;
+}
+.sidebar.open ~ .home-section{
+  left: 250px;
+  width: calc(100% - 250px);
+}
+.home-section .text{
+  display: inline-block;
+  color: #11101d;
+  font-size: 25px;
+  font-weight: 500;
+  margin: 18px
+}
+
+/* Registration Form Style */ 
+
+
+.container {
+	width: 100%;
+	max-width: 700px;
+	padding: 25px 30px;
+	border-radius: 5px;
+    margin: 7% auto;
+    background: #002F56;
+    color: white;
+    
+}
+
+.container .title {
+	font-size: 30px;
+	font-weight: 500;
+	position: relative;
+	justify-content: center;
+}
+
+
+.container form .user-details {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 20px 0 12px 0;
+}
+
+
+form .user-details .input-box {
+	margin-bottom: 15px;
+	width: calc(100% / 2 - 20px);
+}
+
+.user-details .input-box .details {
+	display: block;
+	font-weight: 500;
+	margin-bottom: 5px;
+
+}
+.user-details .input-box input{
+	height: 45px;
+	width: 100%;
+	outline: none;
+	border-radius: 5px;
+	font-size: 14px;	
+	padding-left: 15px;
+	border: 1px solid black;
+}
+
+.user-details .input-box select{
+	height: 45px;
+	width: 100%;
+	outline: none;
+	border-radius: 5px;
+	font-size: 14px;	
+	padding-left: 15px;
+	border: 1px solid black;
+}
+
+.button {
+    height: 45px;
+    margin: 15px 0;
+}
+
+.btn {
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 1;
+    border-radius: 7px;
+    background-color: #1d1b31;
+    color: white;
+    cursor: pointer;
+}
+</style>
 </html>
 
 
