AdminController - Aggiunto la password random nel momento della registrazione
registrazione.html - Risolto il problema del ruolo form

--- a/fullstack/src/main/resources/templates/registrazione.html
+++ b/fullstack/src/main/resources/templates/registrazione.html
@@ -80,12 +80,13 @@
 					<div class="input-box">	
 					  	<span class="details"> Email: </span>
 					  	<input type="text" name="email"placeholder= "Email" required>
-					</div> 	  	
-						  	
+					</div> 	  
+					
+					
 					<div class="input-box">		
 						<span class="details"> Ruolo: </span>
 						<select class="form-control" id="ruolo" name="ruolo" required>
-	                           <option th:each="r:${ruolo}" th:value="${r.idruolo}" th:text="${r.ruolo}" ></option>
+	                           <option th:each="r:${ruolo}" th:value="${r.ruolo}" th:text="${r.ruolo}" ></option>
 	                    </select>
 		            </div> 
 		                    <!-- Ho tolto il tag form, ma non so se c'è bisogno per il captcha -->
